--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "postcss-cli": "^4.1.1"
   },
   "dependencies": {
-    "node-sass": "^6.0.1"
+    "node-sass": "^6.0.1",
+    "npm-run-all": "^4.1.5"
   }
 }
