--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "watch:sass": "node-sass sass/main.scss css/style.css -w",
-    "start": "npm-run-all --parallel watch:sass devserver",
+    "start": "npm-run-all compile:sass concat:sass prefix:css compress:css",
     "compile:sass": "node-sass sass/main.scss css/style.comp.css ",
     "concat:sass": "concat -o css/style.concat.css css/icon-font.css css/style.comp.css",
     "prefix:css": "postcss --use autoprefixer -b 'last versions' css/style.concat.css -o css/style.prefix.css",
