--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "devserver": "live-server",
     "watch:sass": "node-sass sass/main.scss css/style.css -w",
-    "start": "npm-run-all compile:sass concat:sass prefix:css compress:css",
+    "start": "npm-run-all --parallel watch:sass devserver",
     "compile:sass": "node-sass sass/main.scss css/style.comp.css ",
     "concat:sass": "concat -o css/style.concat.css css/icon-font.css css/style.comp.css",
     "prefix:css": "postcss --use autoprefixer -b 'last versions' css/style.concat.css -o css/style.prefix.css",
