--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "Landing page for natours",
   "main": "index.js",
+  "engines": {
+    "node": "14.x"
+  },
   "scripts": {
     "devserver": "live-server",
     "watch:sass": "node-sass sass/main.scss css/style.css -w",
@@ -25,7 +28,5 @@
     "node-sass": "^6.0.1",
     "npm-run-all": "^4.1.5"
   },
-  "engines": {
-    "node": "14.5.3"
-  }
+
 }
